src/dots/dots_kernel.ss/src/Safir/Dob/Typesystem/Internal/Kernel.h

    typedef DotsC_Int64 DotsC_Handle;
    typedef enum {DotsC_KeyMode=0, DotsC_ValueMode=1} DotsC_KeyValMode;
    DOTS_KERNEL_API DotsC_Int32 DotsC_DictionaryInt64KeyToIndex(const DotsC_TypeId typeId, const DotsC_ParameterIndex parameter, const DotsC_Int64 key);
    DOTS_KERNEL_API DotsC_Int32 DotsC_DictionaryStringKeyToIndex(const DotsC_TypeId typeId, const DotsC_ParameterIndex parameter, const char* key);
    DOTS_KERNEL_API DotsC_Int32 DotsC_DictionaryEntityIdKeyToIndex(const DotsC_TypeId typeId, const DotsC_ParameterIndex parameter, const DotsC_EntityId key);
    //********************************************************
    // Operations on blobs
    //********************************************************

    // Raw blob operations - does not need a BlobReader/BlobWriter
    //------------------------------------------------------------------------
    /**
     * @brief Get the type id of the blob.
     * @param blob [in] - The blob.
     * @return Type id of blob.
     */
    DOTS_KERNEL_API DotsC_TypeId DotsC_GetTypeId(const char* blob);
    /**
     * @brief Get size of blob.
     * @param blob [in] - The blob.
     * @return Size of blob.
     */
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetSize(const char* blob);
    /**
     * This method will allocate memory within dots_kernel.
     * The memory must be deleted with DotsC_DeleteBlob.
     *
     * @param to [in,out] - The copy to be created.
     * @param size [in] - Number of bytes to allocate.
     * @return Pointer to allocated memory.
     */
    DOTS_KERNEL_API char* DotsC_AllocateBlob(DotsC_Int32 size);
    /**
     * This method will create an exact copy of a blob. The blob 'to' shall not already
     * have been created since it will cause memory leaks. This method does not delete
     * the blob 'to' before it is allocated.
     *
     * @param to [in,out] - The copy to be created.
     * @param from [in] - The original blob.
     */
    DOTS_KERNEL_API void DotsC_CreateCopyOfBlob(char* & to, const char* from);
    /**
     * Deletes a blob. Blobs created within dots_kernel must be deleted there too.
     * This is the only method that performs a 'delete blob'. All other methods that
     * allocates relies on that this metod is used for deletion.
     *
     * @param blob [in,out] - The blob to be deleted.
     */
    DOTS_KERNEL_API void DotsC_DeleteBlob(char* & blob);
    // Read operations
    //------------------------------------------------------------------------
    /**
     * @brief Create a new instance of blob reader.
     * @param blob [in] - The blob to read.
     * @return Handle to a new blob reader instance.
     */
    DOTS_KERNEL_API DotsC_Handle DotsC_CreateBlobReader(const char* blob);
    /**
     * @brief Deletes an instance of blob reader.
     * @param handle [in] - Handle to the blob readet to be deleted.
     */
    DOTS_KERNEL_API void DotsC_DeleteBlobReader(DotsC_Handle handle);
    /**
     * Get the number of values for a member. If collection type is SingleValueCollectionType 1 will always be returned.
     * @param readerHandle [in] - Handle to blob reader.
     * @param member [in] - The member.
     * @return Number of values.
     */
    DOTS_KERNEL_API DotsC_Int32 DotsC_GetNumberOfMemberValues(DotsC_Handle readerHandle, DotsC_MemberIndex member);
    /**
     * Read member status for a specific member.
     *
     * @param readerHandle [in] - Handle to blob reader.
     * @param isNull [out] - The isNull status. Set to true if null.
     * @param isChanged [out] - The isChanged status. Set to true if changed.
     * @param member [in] - The member.
     * @param valueIndex [in] - The value index.
     */
    DOTS_KERNEL_API void DotsC_ReadMemberStatus(DotsC_Handle readerHandle, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex);
    /**
     * Read a value from the blob managed by the specified blob reader.
     *
     * @param readerHandle [in] - Handle to blob reader.
     * @param val [out] - Read value.
     * @param isNull [out] - Null flag.
     * @param isChanged [out] - Change flag.
     * @param member [in] - Member to read.
     * @param valueIndex [in] - Value index to read.
     * @param keyValMode [in] - Specify if we want to read a key or value. Key is only allowed if member is a dictionary.
     */
    DOTS_KERNEL_API void DotsC_ReadInt32Member(DotsC_Handle readerHandle, DotsC_Int32& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadInt64Member(DotsC_Handle readerHandle, DotsC_Int64& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadFloat32Member(DotsC_Handle readerHandle, DotsC_Float32& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadFloat64Member(DotsC_Handle readerHandle, DotsC_Float64& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadBooleanMember(DotsC_Handle readerHandle, bool& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadStringMember(DotsC_Handle readerHandle, const char*& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadHashedMember(DotsC_Handle readerHandle, DotsC_Int64& val, const char*& optionalStr, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadEntityIdMember(DotsC_Handle readerHandle, DotsC_EntityId& val, const char*& optionalStr, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadBinaryMember(DotsC_Handle readerHandle, const char*& val, DotsC_Int32& size, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    DOTS_KERNEL_API void DotsC_ReadObjectMember(DotsC_Handle readerHandle, const char*& val, bool& isNull, bool& isChanged, DotsC_MemberIndex member, DotsC_Int32 valueIndex, DotsC_KeyValMode keyValMode);
    // Write operations
    //------------------------------------------------------------------------
    /**
     * @brief Create a new instance of blob writer.
     * @param typeId [in] - The type of blob to be written.
     * @return Handle to a new blob writer instance.
     */
    DOTS_KERNEL_API DotsC_Handle DotsC_CreateBlobWriter(DotsC_TypeId typeId);
    /**
     * Create a new instance of blob writer from an existing blob. The existing blob will never be changed.
     *
     * @param blob [in] - Blob that initiates the writer
     * @return Handle to a new blob writer instance.
     */
    DOTS_KERNEL_API DotsC_Handle DotsC_CreateBlobWriterFromBlob(const char* blob);
    /**
     * Create a new instance of blob writer from an existing blobReader handle. The readHandle can
     * be deleted by calling DotsC_DeleteBlobReader at any time.
     *
     * @param readHandle [in] - Handle to a blobReader.
     * @return Handle to a new blob writer instance.
     */
    DOTS_KERNEL_API DotsC_Handle DotsC_CreateBlobWriterFromReader(DotsC_Handle readerHandle);
    /**
     * @brief Deletes an instance of blob writer.
     * @param writerHandle [in] - Handle to the blob writer to be deleted.
     */
    DOTS_KERNEL_API void DotsC_DeleteBlobWriter(DotsC_Handle writerHandle);
    /**
     * Calculate the needed size of the destination blob when calling WriteBlob with this writerHandle.
     * @param writerHandle [in] - Handle to blob writer.
     * @return Number of bytes needed to be allocated before serializing to a raw blob.
     */
    DOTS_KERNEL_API DotsC_Int32 DotsC_CalculateBlobSize(DotsC_Handle writerHandle);
    /**
     * Write content of a blob writer to a raw blob. The blobDest must be preallocated with enough capacity
     * to contain the raw blob. Use CalculateBlobSize to get the needed size.
     * @param writerHandle [in] - Handle to blob writer.
     * @param blobDest [in, out] - Preallocated raw blob. After this call blobDest contains the binary serialization.
     */
    DOTS_KERNEL_API void DotsC_WriteBlob(DotsC_Handle writerHandle, char* blobDest);
    /**
     * Recursively set changed flags for all members.
     *
     * @param writerHandle [in,out] - Handle to blob writer.
     * @param changed [in] - The value to set all change flags to
     */
    DOTS_KERNEL_API void DotsC_WriteAllChangeFlags(DotsC_Handle writerHandle, bool changed);
    /**
     * Set the change flag on one member (non-recursively).
     *
     * @param writerHandle [in,out] - Handle to a blob writer.
     * @param member [in] - id of the member.
     * @param index [in] - array index of member. Shall be 0 if member is not an array.
     * @param changed [in] - The value to set change flag to.
     */
    DOTS_KERNEL_API void DotsC_WriteChangeFlag(DotsC_Handle writerHandle,
                                               DotsC_MemberIndex member,
                                               DotsC_ArrayIndex index,
                                               bool changed);
    /**
     * Creates a BlobWriter and initiates it with current. Then all differences between current and original are
     * marked as changed. The original and current blobs are not changed at all, instead a completely new BlobWriter
     * is created and the caller is responsible for deleting it by calling DotsC_DeleteBlobWriter.
     * @param original [in] - The original blob.
     * @param current [in] - Current version of blob that will be diffed towards original.
     * @return Handle to a new blob writer instance containing a copy of current but with updated change flags.
     */

    /**
      * Diff content of currentWriter and originalReader and mark all changes in currentWriter;
      *
      * @param originalReader [in] - Reader handle to the original blob to compare towards.
      * @param currentWriter [in] - Writer handle to the current blob that will be compared and have ist change flags updated.
      * @return False if there were no changes found, else true. If false is returned nothing has been changed
      *         in currentWriter, if true change flags have been updated.
      */
    DOTS_KERNEL_API bool DotsC_MarkChanges(DotsC_Handle originalReader, DotsC_Handle currentWriter);
    /**
     * Write a value to the blob managed by the specified blob writer.
     * @param writerHandle [in] - Handle to blob writer.
     * @param val [in] - The value to write.
     * @param isNull [in] - Null flag.
     * @param isChanged [in] - Change flag.
     * @param member [in] - The member to write.
     * @param arrayIndex [in] - ArrayIndex, only relevant if member is an array.
     * @param keyValMode [in] - Specify if we want to write a key or value. Key is only allowed if member is a dictionary.
     */
    DOTS_KERNEL_API void DotsC_WriteInt32Member(DotsC_Handle writerHandle, DotsC_Int32 val, bool isNull, bool isChanged, DotsC_MemberIndex member, DotsC_Int32 arrayIndex, DotsC_KeyValMode keyValMode);