src/dots/dots_dotnet.ss/src/Kernel.cs


		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_DictionaryInt64KeyToIndex(System.Int64 typeId,
		                                                                   System.Int32 parameter,
		                                                                   System.Int64 key);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_DictionaryStringKeyToIndex(System.Int64 typeId,
		                                                                    System.Int32 parameter,
		                                                                    System.IntPtr key);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_DictionaryEntityIdKeyToIndex(System.Int64 typeId,
		                                                                      System.Int32 parameter,
		                                                                      DotsC_EntityId key);

		//********************************************************
		//* Operations on blobs
		//********************************************************

		//GetTypeId
		[DllImport(DOTS_KERNEL_NAME, CallingConvention = CallingConvention.Cdecl)]
		internal static extern System.Int64 DotsC_GetTypeId(System.IntPtr blob);

		//GetSize
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int32 DotsC_GetSize(System.IntPtr blob);

		//CreateBlob
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.IntPtr DotsC_AllocateBlob(System.Int32 size);

		//CreateAndCopyBlob
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_CreateCopyOfBlob(out System.IntPtr to,
		                                                   System.IntPtr from);

		//DeleteBlob
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_DeleteBlob(ref System.IntPtr blob);

		//************************************************************************************
		//* Read operations
		//************************************************************************************
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int64 DotsC_CreateBlobReader(System.IntPtr blob);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_DeleteBlobReader(System.Int64 handle);


		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_GetNumberOfMemberValues(System.Int64 readerHandle,
		                                                                 System.Int32 member);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadMemberStatus(System.Int64 readerHandle,
		                                                   out byte isNull,
		                                                   out byte isChanged,
		                                                   System.Int32 member,
		                                                   System.Int32 valueIndex);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadInt32Member(System.Int64 readerHandle,
		                                                  out System.Int32 val,
		                                                  out byte isNull,
		                                                  out byte isChanged,
		                                                  System.Int32 member,
		                                                  System.Int32 valueIndex,
		                                                  KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadInt64Member(System.Int64 readerHandle,
		                                                  out System.Int64 val,
		                                                  out byte isNull,
		                                                  out byte isChanged,
		                                                  System.Int32 member,
		                                                  System.Int32 valueIndex,
		                                                  KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadFloat32Member(System.Int64 readerHandle,
		                                                  out float val,
		                                                  out byte isNull,
		                                                  out byte isChanged,
		                                                  System.Int32 member,
		                                                  System.Int32 valueIndex,
		                                                  KeyValMode keyValMode);


		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadFloat64Member(System.Int64 readerHandle,
		                                                    out double val,
		                                                    out byte isNull,
		                                                    out byte isChanged,
		                                                    System.Int32 member,
		                                                    System.Int32 valueIndex,
		                                                    KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadBooleanMember(System.Int64 readerHandle,
		                                                    out byte val,
		                                                    out byte isNull,
		                                                    out byte isChanged,
		                                                    System.Int32 member,
		                                                    System.Int32 valueIndex,
		                                                    KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadStringMember(System.Int64 readerHandle,
		                                                    out System.IntPtr val,
		                                                    out byte isNull,
		                                                    out byte isChanged,
		                                                    System.Int32 member,
		                                                    System.Int32 valueIndex,
		                                                    KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadHashedMember(System.Int64 readerHandle,
		                                                   out System.Int64 val,
		                                                   out System.IntPtr optionalStr,
		                                                   out byte isNull,
		                                                   out byte isChanged,
		                                                   System.Int32 member,
		                                                   System.Int32 valueIndex,
		                                                   KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadEntityIdMember(System.Int64 readerHandle,
		                                                     out DotsC_EntityId val,
		                                                   	 out System.IntPtr optionalStr,
			                                                 out byte isNull,
			                                                 out byte isChanged,
			                                                 System.Int32 member,
			                                                 System.Int32 valueIndex,
			                                                 KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadBinaryMember(System.Int64 readerHandle,
		                                                     out System.IntPtr val,
		                                                   	 out System.Int32 size,
		                                                     out byte isNull,
		                                                     out byte isChanged,
		                                                     System.Int32 member,
		                                                     System.Int32 valueIndex,
		                                                     KeyValMode keyValMode);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_ReadObjectMember(System.Int64 readerHandle,
		                                                   out System.IntPtr val,
		                                                   out byte isNull,
		                                                   out byte isChanged,
		                                                   System.Int32 member,
		                                                   System.Int32 valueIndex,
		                                                   KeyValMode keyValMode);

		//************************************************************************************
		//* Write operations
		//************************************************************************************
		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int64 DotsC_CreateBlobWriter(System.Int64 typeId);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int64 DotsC_CreateBlobWriterFromBlob(System.IntPtr blob);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern System.Int64 DotsC_CreateBlobWriterFromReader(System.Int64 readerHandle);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_DeleteBlobWriter(System.Int64 writerHandle);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
        internal static extern System.Int32 DotsC_CalculateBlobSize(System.Int64 writerHandle);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteBlob(System.Int64 writerHandle, System.IntPtr blob);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteAllChangeFlags(System.Int64 writerHandle, byte changed);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteChangeFlag(System.Int64 writerHandle,
		                                           			System.Int32 member,
		                                                  	System.Int32 index,
		                                           			byte changed);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern byte DotsC_MarkChanges(System.Int64 originalReader,
		                                              System.Int64 currentWriter);

		[DllImport(DOTS_KERNEL_NAME, CallingConvention=CallingConvention.Cdecl)]
		internal static extern void DotsC_WriteInt32Member(System.Int64 writerHandle, System.Int32 val, byte isNull, byte isChanged,
		                                                   System.Int32 member, System.Int32 arrayIndex, KeyValMode keyValMode);
